fix homepage color contrast (coral-dark)

--- a/tbx/static_src/sass/components/_contact-slim.scss
+++ b/tbx/static_src/sass/components/_contact-slim.scss
@@ -81,7 +81,7 @@
         line-height: 24px;
         text-decoration: none;
         font-weight: bold;
-        color: var(--color--coral);
+        color: var(--color--coral-dark);
         border-bottom: none;
 
         @include media-query(medium) {
